--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint src/**/*.ts",
     "lint:format": "eslint src/**/*.ts --fix",
     "build": "tsc",
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'test/**/*.ts",
     "start:dev": "ts-node-dev src/index.ts",
     "start:prod": "node dist/index.js",
     "seed:run": "node dist/db/seed/index.js"
@@ -17,14 +18,20 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/boom": "^7.3.2",
+    "@types/chai": "^4.3.6",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.8",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
+    "@types/sinon": "^10.0.16",
+    "chai": "^4.3.8",
+    "mocha": "^10.2.0",
+    "sinon": "^16.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
   },
