--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -102,5 +102,11 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": [
+    "test/**/*.test.ts"
+  ],
+  "files": [
+    "src/index.ts"
+  ]
 }
