--- a/backend/package.json
+++ b/backend/package.json
@@ -37,11 +37,13 @@
   },
   "dependencies": {
     "@hapi/boom": "^10.0.1",
+    "@types/crypto-js": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.8",
     "dotenv": "^16.1.4",
     "eslint": "^8.42.0",
