--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "lucide-react": "^0.241.0",
     "next": "13.4.3",
     "next-auth": "^4.22.1",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
